oxiplate-derive/tests/broken/derive/absolute-path.rs
use oxiplate_derive::Oxiplate;

#[derive(Oxiplate)]
#[oxiplate = "/absolute"]
struct Data;

fn main() {
    print!("{}", Data);
}